# kt-bizmeka-mcp

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  SKILL.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: pages.yml  release.yml
.hermes/plans/: 2026-06-30_oauth-remote-server.md
docs/: index.html
scripts/: build.ts  launcher.cjs  mcp_smoke.sh  package.py  pw_login.ts  release.sh
skills/kt-bizmeka/: SKILL.md
skills/kt-bizmeka-login/: SKILL.md
skills/kt-bizmeka-mail-read/: SKILL.md
skills/kt-bizmeka-mail-receipt/: SKILL.md
skills/kt-bizmeka-mail-send/: SKILL.md
src/: calendar.ts  catalog.ts  client.ts  crypto.ts  errors.ts  http.ts  mail.ts  server.ts  session.ts
src/kt_bizmeka_mcp/: __init__.py  catalog.py  client.py  crypto.py  mail.py  server.py  session.py
src/oauth/: authorize.ts  clients.ts  metadata.ts  pages.ts  router.ts  token.ts
src/storage/: crypto.ts  db.ts  file.ts  index.ts  pg.ts  schema.sql  types.ts
