[project]
name = "kt-bizmeka-mcp"
version = "0.1.0"
description = "MCP server for KT bizmeka EZ (ezsso/ezportal) login automation — RSA credential encryption, CSRF handling, SMS 2FA, and SAML SSO into the portal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jeamxn" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pycryptodome>=3.20.0",
]

[project.scripts]
kt-bizmeka-mcp = "kt_bizmeka_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kt_bizmeka_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
